--- a/lab_001/pom.xml
+++ b/lab_001/pom.xml
@@ -7,6 +7,14 @@
     <groupId>Labs</groupId>
     <artifactId>lab_001</artifactId>
     <version>1.0-SNAPSHOT</version>
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
+    <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.9.11</version>
+    </dependency>
 
+</dependencies>
 
 </project>
